the button appears on each card in the movie was stylezed

--- a/src/pages/MoviesGrid.css
+++ b/src/pages/MoviesGrid.css
@@ -43,3 +43,20 @@
     color: #E50914;
 }
 
+.moviesContainer div a {
+    background-color: #E50914;
+    border: 2px solid #E50914;
+    border-radius: 4px;
+    color: #000;
+    padding: 1rem 0.5rem;
+    align-items: center;
+    transition: 0.3s;
+    text-align: center;
+    font-weight: bold;
+}
+
+.moviesContainer div a:hover {
+    background-color: transparent;
+    color: #E50914;
+}
+
