--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -30,6 +30,7 @@
     color: #000;
     padding: 0.3rem;
     font-size: 1.3rem;
+    display: flex;
     align-items: center;
     cursor: pointer;
     transition: 0.3s;
