--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -31,3 +31,28 @@
     justify-content: center;
     gap: 0.4rem;
 }
+
+.tagline {
+    text-align: center;
+    font-size: 1.4rem;
+    margin-bottom: 2rem;
+}
+
+.info {
+    margin-bottom: 1.5rem;
+}
+
+.info h3 {
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.description {
+    padding-bottom: 5rem;
+}
+
+.description p {
+    line-height: 1.4rem;
+}
